# cagoule-bench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: __init__.py  cli.py  orchestrator.py
bench/metrics/: __init__.py
bench/reporters/: __init__.py  console_reporter.py  data_reporters.py  html_reporter.py
bench/suites/: __init__.py  base.py  encryption_suite.py  kdf_suite.py  memory_suite.py  parallel_suite.py
cagoule_bench.egg-info/: SOURCES.txt  requires.txt
results/: bench_20260427_185126.csv  bench_20260427_185126.json  bench_20260427_185126.md
tests/: test_metrics.py  test_reporters.py  test_suites.py
